--- a/locale/en_US/LC_MESSAGES/messages.po
+++ b/locale/en_US/LC_MESSAGES/messages.po
@@ -3,19 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-01-08 12:06+0800\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2016-05-21 20:36+1000\n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.8.7\n"
 
 #: Pixiv Downloader.py:138
 #, python-format
@@ -48,7 +48,7 @@ msgstr "There is no new illustration need to download"
 msgid "Input the artist's id:(separate with space)"
 msgstr "Input the artist's id:(separate with space)"
 
-#: Pixiv Downloader.py:223 Pixiv Downloader.py:264
+#: Pixiv Downloader.py:223 Downloader.py:264
 #, python-format
 msgid "Artists %s ??\n"
 msgstr "Artists %s ??\n"
@@ -69,7 +69,6 @@ msgstr "Artists %s\n"
 #: Pixiv Downloader.py:273
 msgid " Pixiv Downloader 2.2 "
 msgstr " Pixiv Downloader 2.2 "
-
 
 #: Pixiv Downloader.py:284
 msgid "Which do you want to:"
@@ -138,5 +137,3 @@ msgstr "username:"
 #: api.py:153
 msgid "password:"
 msgstr "password:"
-
-
